# nerva

./: .gitignore  18.patch  CMakeLists.txt  CMakeLists_IOS.txt  Dockerfile  LICENSE  Makefile  README.md  ascii-logo.txt  cg_cache_misses.txt
.github/workflows/: build.yml  depends.yml  docker.yml  gitian.yml  post-artifact-links.yml  release.yml
builder/: environment
cmake/: 32-bit-toolchain.cmake  64-bit-toolchain.cmake  FindCcache.cmake  FindUnbound.cmake  GitVersion.cmake  Version.cmake  test-libusb-version.c  test-protobuf.cpp  test-static-assert.c
contrib/: CMakeLists.txt
contrib/brew/: Brewfile
contrib/depends/: Makefile  README.md  packages.md  toolchain.cmake.in
contrib/epee/: CMakeLists.txt
contrib/gitian/: DOCKRUN.md  README.md  dockrun.sh  gitian-android.yml  gitian-build.py  gitian-freebsd.yml  gitian-linux.yml  gitian-osx.yml  gitian-win.yml
contrib/hf14checks/: CMakeLists.txt  check.h  rct_samples.h  t_bp_plus.cpp  t_clsag.cpp  t_cna_v7.cpp  t_fee_weight.cpp  t_serialization.cpp
docs/: ANONYMITY_NETWORKS.md  BUILDING.md  CONTRIBUTING.md  DOCKER.md  LEVIN_PROTOCOL.md  SECOR.md
gpg_keys/: R0BC0D3R.asc  sn1f3rt.asc
gpg_keys/legacy/: README.md  Sn1F3rt.asc
include/: INode.h  IWallet.h
scripts/: analyze_alt_chains.py  analyze_tx_frequency.py
src/: CMakeLists.txt  cryptonote_config.h  version.cpp.in
src/blockchain_db/: CMakeLists.txt  blockchain_db.cpp  blockchain_db.h  testdb.h
src/blockchain_utilities/: CMakeLists.txt  README.md  blockchain_ancestry.cpp  blockchain_blackball.cpp  blockchain_depth.cpp  blockchain_export.cpp  blockchain_import.cpp  blockchain_prune_known_spent_data.cpp  blockchain_stats.cpp  blockchain_usage.cpp  blockchain_utilities.h  blocksdat_file.cpp  blocksdat_file.h  bootstrap_file.cpp  bootstrap_file.h  bootstrap_serialization.h
src/checkpoints/: CMakeLists.txt  checkpoints.cpp  checkpoints.h  quicksync.cpp  quicksync.h
src/common/: CMakeLists.txt  aligned.c  aligned.h  apply_permutation.h  base58.cpp  base58.h  boost_serialization_helper.h  combinator.cpp  combinator.h  command_line.cpp  command_line.h  common_fwd.h  dns_config.cpp  dns_config.h  dns_utils.cpp  dns_utils.h  download.cpp  download.h  error.cpp  error.h  expect.cpp  expect.h  http_connection.h  i18n.cpp  i18n.h  json_util.h  notify.cpp  notify.h  password.cpp  password.h  perf_timer.cpp  perf_timer.h  pod-class.h  pruning.cpp  pruning.h  rpc_client.h  scoped_message_writer.h  sfinae_helpers.h  spawn.cpp  spawn.h  (+14 more)
src/crypto/: CMakeLists.txt  blake256.c  blake256.h  c_threads.h  chacha.h  cna-vm.c  cna-vm.h  crypto-ops-data.c  crypto-ops.c  crypto-ops.h  crypto.cpp  crypto.h  generic-ops.h  groestl.h  groestl_tables.h  hash-extra-blake.c  hash-extra-groestl.c  hash-extra-jh.c  hash-extra-skein.c  hash-ops.h  hash.c  hash.h  hc128.h  hmac-keccak.c  hmac-keccak.h  initializer.h  keccak.c  random.c  random.h  skein_port.h  slow-hash-hw.c  slow-hash-impl.h  slow-hash-sw.c  slow-hash.c  slow-hash.h  tree-hash.c
src/crypto/crypto_ops_builder/: README.md  crypto-ops-data.c  crypto-ops-old.c  crypto-ops.h
src/cryptonote_basic/: CMakeLists.txt  account.cpp  account.h  account_boost_serialization.h  blobdatatype.h  connection_context.h  cryptonote_basic.h  cryptonote_basic_impl.cpp  cryptonote_basic_impl.h  cryptonote_boost_serialization.h  cryptonote_format_utils.cpp  cryptonote_format_utils.h  cryptonote_stat_info.h  difficulty.cpp  difficulty.h  hardfork.cpp  hardfork.h  miner.cpp  miner.h  random_numbers.h  subaddress_index.h  tx_extra.h  verification_context.h
src/cryptonote_core/: CMakeLists.txt  blockchain.cpp  blockchain.h  blockchain_storage_boost_serialization.h  cryptonote_core.cpp  cryptonote_core.h  cryptonote_tx_utils.cpp  cryptonote_tx_utils.h  tx_pool.cpp  tx_pool.h  tx_sanity_check.cpp  tx_sanity_check.h  tx_verification_utils.cpp  tx_verification_utils.h
src/cryptonote_protocol/: CMakeLists.txt  block_queue.cpp  block_queue.h  cryptonote_protocol_defs.h  cryptonote_protocol_handler-base.cpp  cryptonote_protocol_handler.h  cryptonote_protocol_handler.inl  cryptonote_protocol_handler_common.h  levin_notify.cpp  levin_notify.h
src/daemon/: CMakeLists.txt  command_line_args.h  command_parser_executor.cpp  command_parser_executor.h  command_server.cpp  command_server.h  core.h  daemon.cpp  daemon.h  executor.cpp  executor.h  main.cpp  p2p.h  protocol.h  rpc.h  rpc_command_executor.cpp  rpc_command_executor.h
src/daemonizer/: CMakeLists.txt  daemonizer.h  posix_daemonizer.inl  posix_fork.cpp  posix_fork.h  windows_daemonizer.inl  windows_service.cpp  windows_service.h  windows_service_runner.h
src/debug_utilities/: CMakeLists.txt  cn_deserialize.cpp  dns_checks.cpp  object_sizes.cpp
src/device/: CMakeLists.txt  device.cpp  device.hpp  device_cold.hpp  device_default.cpp  device_default.hpp  device_io.hpp  device_io_hid.cpp  device_io_hid.hpp  device_ledger.cpp  device_ledger.hpp  log.cpp  log.hpp
src/extras/: CMakeLists.txt
src/lmdb/: CMakeLists.txt  database.cpp  database.h  error.cpp  error.h  key_stream.h  table.cpp  table.h  transaction.h  util.h  value_stream.cpp  value_stream.h
src/mnemonics/: CMakeLists.txt  chinese_simplified.h  dutch.h  electrum-words.cpp  electrum-words.h  english.h  english_old.h  esperanto.h  french.h  german.h  italian.h  japanese.h  language_base.h  lojban.h  portuguese.h  russian.h  singleton.h  spanish.h
src/multisig/: CMakeLists.txt  multisig.cpp  multisig.h
src/net/: CMakeLists.txt  dandelionpp.cpp  dandelionpp.h  error.cpp  error.h  fwd.h  i2p_address.cpp  i2p_address.h  parse.cpp  parse.h  socks.cpp  socks.h  socks_connect.cpp  socks_connect.h  tor_address.cpp  tor_address.h  zmq.cpp  zmq.h
src/p2p/: CMakeLists.txt  net_node.cpp  net_node.h  net_node.inl  net_node_common.h  net_peerlist.cpp  net_peerlist.h  net_peerlist_boost_serialization.h  p2p_protocol_defs.h  stdafx.h
src/ringct/: CMakeLists.txt  bulletproofs.cc  bulletproofs.h  multiexp.cc  multiexp.h  rctCryptoOps.c  rctCryptoOps.h  rctOps.cpp  rctOps.h  rctSigs.h  (+3 more)
translations/: CMakeLists.txt  generate_translations_header.c
(+147 files in other folders)
